--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "react-time-format": "0.0.5"
+  }
 }
