--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "body-parser": "^1.18.3",
     "bootstrap": "^4.1.3",
+    "express": "^4.16.4",
     "react": "^16.6.3",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "serve": "^10.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -26,5 +29,6 @@
   ],
   "devDependencies": {
     "react-time-format": "0.0.5"
-  }
+  },
+  "proxy": "http://localhost:5000/"
 }
