--- a/package.json
+++ b/package.json
@@ -28,6 +28,17 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "react-time-format": "0.0.5"
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.7.0",
+    "enzyme-to-json": "^3.3.4",
+    "jest": "^23.6.0",
+    "raf": "^3.4.1",
+    "react-addons-shallow-compare": "^15.6.2",
+    "react-test-renderer": "^16.6.3"
+  },
+  "jest": {
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ]
   }
 }
