--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "actioncable": "^5.2.1-1",
     "bootstrap": "^4.1.3",
     "react": "^16.6.3",
     "react-bootstrap": "^0.32.4",
